<resources>
    <string name="app_name">CreateYourApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_url">Request URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="select_operation">Select Operation</string>
    <string name="get">Get</string>
    <string name="execute">Execute</string>
    <string name="post">Post</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="query_parameters">Query Parameters</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add_query"><u>Add Query</u></string>

</resources>